--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -29,7 +29,7 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new appointments migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7" id="startAppointmentsMigrationPreviewPage">Start a new appointments migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-two-thirds">
                     {% if form.estimatedCount %}
@@ -44,6 +44,17 @@
                                     <a href="{{ activate_prison_link }}" data-qa="activate-prison-button-{{ prisonId }}">Activate prison</a>
                                 </p>
                             {% endfor %}
+                            {% if form.appointmentCounts|length %}
+                                <span>
+                                    <p class="govuk-notification-banner__heading" id="nomisAppointmentCounts">
+                                        Summarised appointment counts for prisons {{ form.prisonIds }}.
+                                        <a href="#" id='copy-appointment-counts-link'">Copy</a>
+                                        <span class="govuk-visually-hidden result-success copy-link-confirmation" id="copy-appointment-counts-confirmed">OK</span>
+                                        <span class="govuk-visually-hidden result-error copy-link-confirmation" id="copy-appointment-counts-failed">Fail</span>
+                                        <textarea class="govuk-visually-hidden" id="copy-appointment-counts-text" rows="{{ form.appointmentCounts|length }}" cols="200" readonly>{{ form.appointmentCounts|join("\n") }}</textarea>
+                                    </p>
+                                </span>
+                            {% endif %}
                         {% endset %}
 
                         {{ govukNotificationBanner({
