SDIT-1479: 🐛 Click label instead of checkbox

--- a/server/views/pages/visits/startVisitsMigration.njk
+++ b/server/views/pages/visits/startVisitsMigration.njk
@@ -49,7 +49,7 @@
                             errorMessage: errors | findError('visitTypes'),
                             fieldset: {
                                 legend: {
-                                  text: "Which types visits should be inlcuded?",
+                                  text: "Which types visits should be included?",
                                   isPageHeading: false,
                                   classes: "govuk-label"
                                 }
