--- a/server/views/pages/alerts/startAlertsMigrationPreview.njk
+++ b/server/views/pages/alerts/startAlertsMigrationPreview.njk
@@ -9,12 +9,12 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
 
-{% set pageTitle = applicationName + " - Start a adjudications migration - preview" %}
+{% set pageTitle = applicationName + " - Start a alerts migration - preview" %}
 
 {% block content %}
     {{ govukBackLink({
         text: "Back",
-        href: '/adjudications-migration/amend'
+        href: '/alerts-migration/amend'
     }) }}
 
     <main class="app-container govuk-body">
@@ -29,13 +29,13 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new adjudications migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new alerts migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-two-thirds">
                     {% if form.estimatedCount %}
                         {% set html %}
                             <p class="govuk-notification-banner__heading" id="estimateSummary">
-                                Estimated number of Adjudications entities to be migrated: {{ form.estimatedCount }}
+                                Estimated number of Alerts entities to be migrated: {{ form.estimatedCount }}
                             </p>
                         {% endset %}
 
@@ -47,7 +47,7 @@
                     {% if form.dlqCount > 0 %}
                         {% set dlqText %}There are {{ form.dlqCount }} messages on the migration dead letter queue. Please clear these before starting the migration{% endset %}
                         {% set html %}
-                        <form action="/adjudications-migration/start/delete-faiures" method="post" novalidate>
+                        <form action="/alerts-migration/start/delete-faiures" method="post" novalidate>
                         <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
                         <p>If you are sure all previous failures have been successfully understood and processed, you can permanently delete any record of these errors</p>
                         <div class="govuk-button-group">
@@ -82,7 +82,7 @@
                     }) }}
 
 
-                    <form action="/adjudications-migration/start/preview" method="post" novalidate>
+                    <form action="/alerts-migration/start/preview" method="post" novalidate>
                         <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
 
                         <div class="govuk-button-group">
@@ -92,7 +92,7 @@
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
                             }) }}
-                            <a class="govuk-link" href="/adjudications-migration">Cancel</a>
+                            <a class="govuk-link" href="/alerts-migration">Cancel</a>
                         </div>
                     </form>
                 </div>
@@ -114,7 +114,7 @@
             actions: {
                 items: [
                     {
-                        href: "/adjudications-migration/amend",
+                        href: "/alerts-migration/amend",
                         text: "Change",
                         visuallyHiddenText: label,
                         attributes: { 'data-qa': dataQa }
