--- a/server/views/pages/alerts/alertsMigrationDetails.njk
+++ b/server/views/pages/alerts/alertsMigrationDetails.njk
@@ -4,46 +4,46 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
-{% set pageTitle = applicationName + " - Adjudications migration details" %}
+{% set pageTitle = applicationName + " - Alerts migration details" %}
 
 {% block content %}
 
   {{ govukBackLink({
     text: "Back",
-    href: '/adjudications-migration'
+    href: '/alerts-migration'
   }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Adjudications migration details</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Alerts migration details</h1>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
       {% set detailsHtml %}
-      <p> 
-        When a migration is in progress a background service counts all adjudications entities that can possibly be migrated and adds each entity to a queue. That initial count is the <b>Estimated</b> number.
+      <p>
+        When a migration is in progress a background service counts all alerts entities that can possibly be migrated and adds each entity to a queue. That initial count is the <b>Estimated</b> number.
         That number does not take into account if any record had previously been migrated. Also, if an entity was created just after the initial calculation it may still be processed.
         At the beginning of the process the <b>Still to be processed</b> count will go up until it eventually gets close to the <b>Estimated</b> number. The <b>Still to be processed</b> number represents the number of records that still requiring processing. By the end of the process that number will go to zero.
-        </p> 
+        </p>
         <p>
           The <b>Migrated</b> number represents the number of records that have successfully migrated in this session. By the end of the process that number should equal the <b>Estimated</b> number if all records found in NOMIS were successfully migrated.
         </p>
         <p>
           The <b>Failed</b> number represents the number of records that failed to migrate. A failed record is held in a dead letter queue. It may take a long time before any records that are destined to fail actually appear in this number because they retried several times, each time going to the back of the queue.
-        </p>    
+        </p>
         <p>
           The <b>Failed</b> number technically is just the current number of records on the dead letter queue. So messages that have not been fixed from the previous migration would appear in this number, hence it is important a new migration should not be started before any failed records from previous migrations are dealt with (either fixed or discarded).
-        </p>  
+        </p>
         <p>
           <b>Note:</b> Since the numbers are counts from the AWS SQS messaging system, that itself are just approximations, numbers can go up and down when the <b>Refresh</b> button is pressed.
-        </p>  
-       
+        </p>
+
       {% endset %}
 
       {{ govukDetails({
         summaryText: "What do all the numbers mean?",
         html: detailsHtml
-      }) }}                
+      }) }}
     </div>
 </div>
 
@@ -117,7 +117,7 @@
                 text: "Estimated"
               },
               value: {
-                text:  migration.history.estimatedRecordCount 
+                text:  migration.history.estimatedRecordCount
               }
             },
             {
@@ -152,14 +152,14 @@
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <form action="/adjudications-migration/cancel" method="post" novalidate>
+        <form action="/alerts-migration/cancel" method="post" novalidate>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
             <input type="hidden" name="migrationId" value="{{ migration.history.migrationId }}"/>
 
             <div class="govuk-button-group">
               {{ govukButton({
                 text: "Refresh",
-                href: '/adjudications-migration/details?migrationId=' + migration.history.migrationId,
+                href: '/alerts-migration/details?migrationId=' + migration.history.migrationId,
                 classes: "govuk-button--secondary"
               }) }}
               {% if  migration.history.status != 'COMPLETED'  %}
