--- a/server/views/pages/alerts/alertsMigrationFailures.njk
+++ b/server/views/pages/alerts/alertsMigrationFailures.njk
@@ -4,18 +4,18 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
-{% set pageTitle = applicationName + " - Adjudications migration failures" %}
+{% set pageTitle = applicationName + " - Alerts migration failures" %}
 
 {% block content %}
 
   {{ govukBackLink({
     text: "Back",
-    href: '/adjudications-migration'
+    href: '/alerts-migration'
   }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Adjudications migration failures</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Alerts migration failures</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <p>All records that are on the main dead letter queue are displayed. These may include records from other migration runs.
@@ -57,7 +57,7 @@
                 {{ govukDetails({
                   summaryText: "Full message",
                   text: message | json(['applicationInsightsLink'])
-                }) }}                
+                }) }}
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
 
           {{ govukTable({
             caption: bob,
-            captionClasses: "govuk-table__caption--m",            
+            captionClasses: "govuk-table__caption--m",
             rows: rows
           }) }}
         {% else %}
