--- a/server/views/pages/alerts/startAlertsMigrationPreview.njk
+++ b/server/views/pages/alerts/startAlertsMigrationPreview.njk
@@ -35,7 +35,7 @@
                     {% if form.estimatedCount %}
                         {% set html %}
                             <p class="govuk-notification-banner__heading" id="estimateSummary">
-                                Estimated number of Alerts entities to be migrated: {{ form.estimatedCount }}
+                                Estimated number of Prisoners where alerts entities will be migrated: {{ form.estimatedCount }}
                             </p>
                         {% endset %}
 
