SDIT-1824 Add start migration

--- a/server/views/pages/prisonperson/prisonPersonMigration.njk
+++ b/server/views/pages/prisonperson/prisonPersonMigration.njk
@@ -112,7 +112,7 @@
                           </div>
                           {% if u.filterPrisonerNumber %}
                             <div class="govuk-grid-column-full">
-                              <span class="govuk-label--s">Prison:</span><span data-qa="filterPrisonerNumber" class="govuk-!-margin-left-2">{{ u.filterPrisonerNumber }}</span>
+                              <span class="govuk-label--s">Prisoner number:</span><span data-qa="filterPrisonerNumber" class="govuk-!-margin-left-2">{{ u.filterPrisonerNumber }}</span>
                             </div>
                           {% endif %}
                         </div>
