--- a/server/views/pages/courtSentencing/courtSentencingMigrationFailures.njk
+++ b/server/views/pages/courtSentencing/courtSentencingMigrationFailures.njk
@@ -4,18 +4,18 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
-{% set pageTitle = applicationName + " - Alerts migration failures" %}
+{% set pageTitle = applicationName + " - Court Sentencing migration failures" %}
 
 {% block content %}
 
   {{ govukBackLink({
     text: "Back",
-    href: '/alerts-migration'
+    href: '/court-sentencing-migration'
   }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Alerts migration failures</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Court Sentencing migration failures</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <p>All records that are on the main dead letter queue are displayed. These may include records from other migration runs.
