--- a/server/views/pages/prisonperson/prisonPersonMigrationDetails.njk
+++ b/server/views/pages/prisonperson/prisonPersonMigrationDetails.njk
@@ -54,6 +54,9 @@
             <span class="govuk-label--s">Prisoner Number:</span><span data-qa="filterPrisonerNumber" class="govuk-!-margin-left-2">{{ migration.history.filterPrisonerNumber }}</span>
           </div>
         {% endif %}
+      <div>
+        <span class="govuk-label--s">Migration Type:</span><span data-qa="filterMigrationType" class="govuk-!-margin-left-2">{{ migration.history.filterMigrationType }}</span>
+      </div>
       {% endset %}
 
       <div class="govuk-grid-column-full">
