--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -8,6 +8,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Activities migration" %}
+{% set bodyAttributes = {'data-page': 'filter-toggle'} %}
 
 {% block content %}
   {{ govukBackLink({
@@ -179,9 +180,4 @@
     </div>
   </div>
 
-{% endblock %}
-
-{% block bodyEnd %}
-  {{ super() }}
-  <script src="/assets/filter-toggle-button.js"></script>
 {% endblock %}
