--- a/server/views/pages/courtSentencing/courtSentencingMigration.njk
+++ b/server/views/pages/courtSentencing/courtSentencingMigration.njk
@@ -7,6 +7,7 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {% set pageTitle = applicationName + " - Court Sentencing migration" %}
+{% set bodyAttributes = {'data-page': 'filter-toggle'} %}
 
 {% block content %}
   {{ govukBackLink({
@@ -137,9 +138,4 @@
     </div>
   </div>
 
-{% endblock %}
-
-{% block bodyEnd %}
-  {{ super() }}
-  <script src="/assets/filter-toggle-button.js"></script>
 {% endblock %}
