SDIT-2037: 🎨 Rewrite javascript after esbuild introduction

--- a/server/views/pages/allocations/startAllocationsMigrationPreview.njk
+++ b/server/views/pages/allocations/startAllocationsMigrationPreview.njk
@@ -10,6 +10,7 @@
 
 
 {% set pageTitle = applicationName + " - Start an allocations migration - preview" %}
+{% set bodyAttributes = {'data-page': 'copy-text'} %}
 
 {% block content %}
     {{ govukBackLink({
