--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -10,6 +10,7 @@
 
 
 {% set pageTitle = applicationName + " - Start a appointments migration - preview" %}
+{% set bodyAttributes = {'data-page': 'copy-text'} %}
 
 {% block content %}
     {{ govukBackLink({
