Revert "SDIT-2037: 🎨 Rewrite javascript after esbuild introduction (#196)"
This reverts commit 4560c7938ff9dd8bd4f4283b797a24fc02718203.

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -17,4 +17,5 @@
 
 {% block bodyEnd %}
   <script type="module" src="{{ '/assets/js/app.js' | assetMap }}"></script>
+  <script src="/assets/js/page-enhancements.js"></script>
 {% endblock %}
