--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -10,6 +10,7 @@
 
 
 {% set pageTitle = applicationName + " - Start an activities migration - preview" %}
+{% set bodyAttributes = {'data-page': 'copy-text'} %}
 
 {% block content %}
     {{ govukBackLink({
@@ -29,7 +30,7 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7" id="startActivitiesMigrationPreviewPage">Start a new activities migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new activities migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-three-quarters">
                     {% if form.estimatedCount %}
