--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -30,7 +30,7 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7" id="startAppointmentsMigrationPreviewPage">Start a new appointments migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new appointments migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-two-thirds">
                     {% if form.estimatedCount %}
