--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -10,6 +10,7 @@
 
 
 {% set pageTitle = applicationName + " - Start a appointments migration - preview" %}
+{% set bodyAttributes = {'data-page': 'copy-text'} %}
 
 {% block content %}
     {{ govukBackLink({
@@ -29,7 +30,7 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7" id="startAppointmentsMigrationPreviewPage">Start a new appointments migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new appointments migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-two-thirds">
                     {% if form.estimatedCount %}
