--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -97,18 +97,23 @@
                           </div>
                         </div>
 
+                        {% if u.whenEnded %}
                           <div class="govuk-grid-row govuk-!-margin-bottom-2">
                           {% if u.recordsFailed + u.recordsMigrated < u.estimatedRecordCount %}
-                            <div class="govuk-grid-column-two-thirds">
-                              <a data-qa="already-migrated-link" class="govuk-link"  target="_blank" href="{{ u.applicationInsightsLink }}">View Insights</a> for already migrated records
+                            <div class="govuk-grid-column-full">
+                              <a data-qa="already-migrated-link" class="govuk-link"  target="_blank" href="{{ u.appInsightsAlreadyMigratedLink }}">View already migrated activities in AppInsights</a>
                             </div>
                           {% endif %}
                           {% if u.recordsFailed > 0 %}
-                            <div class="govuk-grid-column-one-third">
-                              <a data-qa="failures-link" class="govuk-link" href="/activities-migration/failures?migrationId={{ u.migrationId }}">View failures</a>
+                            <div class="govuk-grid-column-full">
+                              <a data-qa="failures-link" class="govuk-link"  target="_blank" href="{{ u.appInsightsFailuresLink }}">View failures in App Insights</a>
                             </div>
                           {% endif %}
+                            <div class="govuk-grid-column-full">
+                              <a data-qa="all-events-link" class="govuk-link"  target="_blank" href="{{ u.appInsightsFullMigrationLink }}">View all migration events in App Insights</a>
+                            </div>
                           </div>
+                        {% endif %}
 
                         <div class="govuk-grid-row govuk-!-margin-bottom-2">
                           <div class="govuk-grid-column-full govuk-!-margin-bottom-3 govuk-!-margin-top-2">
