--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -144,6 +144,7 @@
                     {% set summaryRows = [] %}
 
                     {{ summaryRow(form.prisonId, "Prison code", summaryRows, "prison-id") }}
+                    {{ summaryRow(form.activityStartDate, "Activity start date", summaryRows, "activity-start-date") }}
                     {{ summaryRow(form.courseActivityId, "Single course activity to migrate", summaryRows, "course-activity-id") }}
 
                     {{ govukSummaryList({
